1.26 2014-08-12
    Skip the bc test on OS-es where it has been failing.
    Stop inheriting from Exporter.

1.25 2014-08-05
    Fix test count.

1.24 2014-08-04
    More test diagnostics.
    Tests added for RT #62359

1.23 2014-07-29
    Refactoring test script.
    Eliminate indirect calls in the code and in the docs.
    Use Perl::Tidy to unify layout. 
    Add use warnings;
    IO::Tty prerequisite version 1.03 => 1.11

1.22 2014-07-27
    New unofficial mainainer (Gabor Szabo)
    Merge .pod and .pm and move them to lib/
    Move the test and the code to standard location /t in the distribution.
    Eliminate indirect calls in tests.
    Use Test::More instead of home-brew testing.
    Typos fixed in pod RT #86852.
    Changes file re-ordered and standardized.

1.21 2007-08-13


1.20 2006-07-21
    + added early return to send and send_slow if filehandle was closed
    + added test for send_slow
    ! fixed bug in expect() param handling (exact pattern "0" was ignored)
    ! fixed bug in _make_readable()
    + now included example ssh.pl in MANIFEST so it gets packaged :-(

1.19 2006-07-17
    ! fixed non-localized usage of $_
    + added new example ssh.pl

1.18 2006-07-11
    ! added another pipe to synchronize spawning. Closing the slave in the
      parent can lead to a hang if the child already wrote something into
      it...
    ! fixed REs in test to deal with shell prompts

1.17 2006-05-31
    ! fixed param check for expect() to allow expect(undef) et al

1.16 2006-05-05
    ! fixed hangup with pipe sync upon spawn by adding close-on-exec to pipe handle
    ! fixed log_file(undef) when logging to CODE ref
    ! fixed $? mangling in DESTROY by saving & restoring status
    ! fixed hangup in send_slow
    ! fixed ugly solaris hack by disabling it for raw ptys
    + added param check for expect()

1.15 2002-03-19
    ! fixed bug in _multi_expect, pattern weren't tried against accum due
      to exp_New_Data not set.

1.14 2002-03-13
    same as 1.13_10